<resources>
    <string name="app_name">My Application</string>
    <string name="baseNum1">1234</string>
    <string name="baseNum2">3333</string>
    <string name="result">4567</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="multiplyButton">*</string>
    <string name="divideButton">/</string>
    <string name="hint1">1234</string>
</resources>