<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:text="@string/baseNum1" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:text="@string/baseNum2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/result" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/plusButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/minusButton" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/multiplyButton" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/divideButton" />
</LinearLayout>