<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:autofillHints="1234"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="textPersonName"
        android:text="@string/baseNum1" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:autofillHints="3333"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:text="@string/baseNum2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/result" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/plusButton" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/minusButton" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button5"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/multiplyButton" />

        <Button
            android:id="@+id/button6"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/divideButton" />
    </LinearLayout>

</LinearLayout>